step3/k3s-deploy/apps/ingress-argo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-http-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Ensure the correct ingress class
    alb.ingress.kubernetes.io/backend-protocol: "HTTPS"  # Use HTTPS between ALB and backend
spec:
  rules:
  - host: app1.com  # Change this to your actual domain
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 443  # Ensure ArgoCD is running on HTTPS (443)
